Cambios hechos en clase 27/10

--- a/Facturador.csproj
+++ b/Facturador.csproj
@@ -8,7 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Interfaces\" />
+    <Compile Remove="Models\Interfaces\**" />
+    <EmbeddedResource Remove="Models\Interfaces\**" />
+    <None Remove="Models\Interfaces\**" />
   </ItemGroup>
 
   <ItemGroup>
