--- a/appsettings.json
+++ b/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Facturador.db"
+    "DefaultConnection": "Server=localhost,1434;Database=Facturador;User Id=SA;Password=TuPasswordSegura123!;TrustServerCertificate=True"
   }
 }
